--- a/firefox_plugin/transcriptionHelp/manifest.json
+++ b/firefox_plugin/transcriptionHelp/manifest.json
@@ -11,7 +11,8 @@
     {
       "matches": ["http://simorgh.umd.edu/*edit*"], // see https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/Match_patterns
       "js": ["transcriptionHelp.js"],
-      "css": ["transcriptionHelp.css"]
+      "css": ["transcriptionHelp.css"],
+      "run_at":"document_start"
     }
   ],
   "permissions": [
