Adapt script to work with API instead of remote dictionary

--- a/firefox_plugin/transcriptionHelp/manifest.json
+++ b/firefox_plugin/transcriptionHelp/manifest.json
@@ -18,6 +18,7 @@
   "permissions": [
     "*://raw.githubusercontent.com/pverkind/*",
     "*://pverkind.github.io/*",
-    "webRequest"
+    "webRequest",
+    "*://localhost/*"
   ]
 }
